--- a/static/styles.css
+++ b/static/styles.css
@@ -13,11 +13,14 @@ td {
 }
 
 .cell {
-    border: none;
     height: 30px;
     width: 30px;
     text-align: center;
     font-size: 20px;
+}
+
+.cell_input {
+    border: none;
 }
 
 #solve_btn {
@@ -25,14 +28,8 @@ td {
     width: 100px;
     text-align: center;
     font-size: 30px;
-    display: block;
-    margin: 40px auto 0 auto;
-    
-    /* color: white;
-    background-color: #56CCF2;
-    border: none;
-    border-radius: .3em;
-    font-weight: bold; */
+    display: inline-block;
+    margin: 20px 50px 0 0;
 }
 
 #clear_btn {
@@ -40,6 +37,14 @@ td {
     width: 100px;
     text-align: center;
     font-size: 30px;
-    display: block;
-    margin: 10px auto 0 auto;
+    display: inline-block;
+    margin: 20px 0 0 50px;
+}
+
+#buttons_container {
+    text-align: center;
+}
+
+#result_div {
+    margin-top: 20px;
 }
