--- a/templates/index.html
+++ b/templates/index.html
@@ -28,8 +28,9 @@
     </table>
 
     <div id="buttons_container">
-    <input id="solve_btn" type="button" value="Solve">
-    <input id="clear_btn" type="button" value="Clear">
+    <input id="solve_btn" class="btn" type="button" value="Solve">
+    <input id="scan_btn" class="btn" type="button" value="Scan">
+    <input id="clear_btn" class="btn" type="button" value="Clear">
     </div>
 
     <div id="result_div">
