added scanning a photo

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,8 @@
 
     <div id="buttons_container">
     <input id="solve_btn" class="btn" type="button" value="Solve">
-    <input id="scan_btn" class="btn" type="button" value="Scan">
+    <input id="scan_btn" class="btn" type="button" value="Scan photo" onclick="$('#file_input').click();">
+    <input id="file_input" type="file" style="display:none">
     <input id="clear_btn" class="btn" type="button" value="Clear">
     </div>
 
