--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   <title>Sudoku</title>
   <link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="{{url_for('static', filename='script.js')}}" async type="module"></script>
+  <script type="application/javascript" src="{{url_for('static', filename='script.js')}}" async></script>
 </head>
 
 <body>
